# MPI_PICalc_TRPINT

./: .gitignore  CMakeLists.txt  README.md  mean.py  pi_driver.sh  pi_serial.cpp  piprl  trp  trp_driver.sh
helpful/: hello2.cpp
parallel/: pi_parallel.cpp  trp_parallel.cpp
parallel/data/: mean_pi_parallel_time.txt  mean_trp_parallel_time.txt  pi_cores_samples.txt  pi_parallel_time.txt  trp_cores_samples.txt  trp_parallel_time.txt
serial/: pi_serial.cpp  trp_serial.cpp
serial/data/: pi_serial_time.txt  trp_serial_time.txt
